# coreassist-electron

./: .gitignore  .replit  README.md  index.html  pyproject.toml  replit.md
backend/: README.md  auth_utils.py  main.py  registry.py  requirements.txt
backend/auth/: store.py
backend/auth_service/: app.py  main.py  models.py  replit_auth.py  routes.py
backend/auth_service/templates/: 403.html  connect_service.html  dashboard.html  landing.html
backend/connectors/google_calendar/: connector.py  manifest.json
backend/connectors/google_tasks/: connector.py  manifest.json
backend/connectors/slack/: connector.py  manifest.json
docs/: electron-distribution-guide.md
electron/: main.js  package-lock.json  package.json  preload.js
electron/renderer/: index.html  script.js  style.css
